# rules_ts

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelrc.common  .bazelversion  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  action_cache.txt  internal_deps.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  version.patch
.github/workflows/: .aspect-workflows-reusable.yaml  BUILD.bazel  aspect-workflows-delivery.yaml  aspect-workflows-warming.yaml  aspect-workflows.yaml  bazel6.bazelrc  ci-vanilla-bazel.yaml  ci-workflows.yaml  ci.bazelrc  ci.yaml  deps.bzl  mirror.yml  publish.yaml  release.yml  release_prep.sh  tag.yaml  workspace_snippet.sh
docs/: .bazelrc  BUILD.bazel  MODULE.bazel  performance.md  proto.md  repositories.md  rules.md  transpiler.md  troubleshooting.md  tsconfig.md
e2e/bzlmod/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  foo.proto  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
e2e/bzlmodules/: BUILD.bazel  MODULE.bazel  WORKSPACE
e2e/external_dep/: .bazelignore  .bazelrc  BUILD  MODULE.bazel  WORKSPACE  package.json  tsconfig.json
e2e/nested_repos/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md
e2e/rules_js_v3/: BUILD.bazel  MODULE.bazel  WORKSPACE  package.json  tsconfig.json
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  package.json  pnpm-lock.yaml
e2e/worker/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  common.bats  fail.ts  fail_test.bats  foo.ts  lib.ts  main.ts  no_undeclared_symlink_test.bats  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.sh  tsconfig.json
e2e/worker_workspace/: .bazelrc  BUILD.bazel  WORKSPACE  package.json  test.sh
examples/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  REPO.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  testing.bzl
examples/assets/: BUILD.bazel  example.json
examples/aws-sdk/: BUILD.bazel  index.ts  tsconfig.json
examples/connect_node/: BUILD.bazel  README.md  connect.ts  package.json  server.ts  tsconfig.json
examples/custom_compiler/: BUILD.bazel  component.mts  tsconfig.json
examples/declaration_dir/: BUILD.bazel  expected_outputs.txt  tsconfig.json
examples/declaration_only/: BUILD.bazel  a.ts  tsconfig.json
examples/declarationdir_with_value/: BUILD.bazel  expected_outputs.txt
examples/deps_lib/: BUILD.bazel  importer_linked.ts
examples/deps_lib_transpiler/: BUILD.bazel  importer_linked.ts
examples/deps_pkg/: BUILD.bazel  importer_linked.ts
examples/deps_pkg_transpiler/: BUILD.bazel  importer_linked.ts  importer_rel.ts  index.ts
examples/dts_lib/: BUILD.bazel  importer.ts  importer_linked.ts  importer_rel.ts  index.ts  lib_types.d.ts  lib_types_2.d.mts
examples/dts_pkg/: BUILD.bazel
examples/dts_pkg-outDir/: BUILD.bazel  importer_linked.ts  importer_rel.ts  tsconfig.json
examples/dts_pkg-outDir-rootDir/: BUILD.bazel  tsconfig.json
examples/emit_declaration_only/: BUILD.bazel  tsconfig.json
examples/extends_chain/: BUILD.bazel  tsconfig.emit.json  tsconfig.json  tsconfig.node.json
examples/gen_srcs/: BUILD.bazel  tsconfig.json
examples/generate_trace/: BUILD.bazel
examples/global_consumer/: BUILD.bazel  index.ts  tsconfig_gen.json.expected
examples/global_dts_generated_tsconfig/: BUILD.bazel  global.d.ts  index.ts  tsconfig_gen.json.expected
examples/grandparent/: BUILD.bazel  index.ts  tsconfig.json
examples/isolatedDeclarations/: README.md
examples/isolated_declarations/: .swcrc  BUILD.bazel  README.md  swc_decls.bzl  tsconfig.json
examples/js_lib/: BUILD.bazel  data.json  index.js
examples/js_lib2/: BUILD.bazel  index.js
examples/js_lib_pkg/: BUILD.bazel  index.d.ts
examples/js_pkg/: BUILD.bazel
examples/js_test/: BUILD.bazel  test.ts
examples/json/: BUILD.bazel  tsconfig.json
examples/json_data/: BUILD.bazel
examples/jsx/: BUILD.bazel  a.tsx  b.jsx  expected_outputs.txt  tsconfig.json
examples/lib_nocompile/: BUILD.bazel  index.ts
examples/lib_nocompile_linked/: package.json  tsconfig.json
examples/linked/: BUILD.bazel  index.ts  package.json
examples/linked_consumer/: BUILD.bazel  package.json  test_file_all_linked.js  test_pkg_deps_linked.js  test_pkg_nocompile_linked.js
examples/linked_empty_node_modules/: BUILD.bazel  tsconfig.json
examples/linked_lib/: BUILD.bazel  index.ts  package.json  tsconfig.json
examples/linked_pkg/: BUILD.bazel  package.json
examples/linked_tsconfig/: BUILD.bazel  package.json  tsconfig.json
examples/linked_tsconfig_consumer/: BUILD.bazel  package.json  tsconfig.json
examples/module_ext/: BUILD.bazel  a.mts  b.mjs  c.cts  d.cjs  e.ts  expected_outputs.txt  tsconfig.json
examples/no_emit/: BUILD.bazel  tsconfig.json
examples/out_dir/: BUILD.bazel  tsconfig-outdir-foo.json  tsconfig.json
examples/output_group/: BUILD.bazel  index.ts
examples/package_json_usage/: BUILD.bazel  tsconfig.json
examples/path_mappings/: BUILD.bazel  foo.ts  tsconfig.json
examples/project_references/: BUILD.bazel  README.md  tsconfig-base.json
examples/proto_grpc/: BUILD.bazel  README.md  defs.bzl  logger.proto  logger_connect.d.ts  logger_pb.d.ts  main.ts  package.json  status.proto  status_connect.d.ts  status_pb.d.ts  tsconfig.json
examples/resolve_json_module/: BUILD.bazel  index-importing-package-json.ts  index.ts  tsconfig.json
examples/resolve_json_module_esm/: BUILD.bazel  index.mts  package.json  tsconfig.json
examples/resolve_json_module_out_dir/: BUILD.bazel  tsconfig.json
examples/resolve_json_module_transpiler/: BUILD.bazel  data.json  index.ts
examples/root_dir/: BUILD.bazel  tsconfig-dot.json  tsconfig-dotslash.json  tsconfig.json
examples/root_dirs/: BUILD.bazel
gazelle/: BUILD.bazel  README.md  WORKSPACE  config.go  configure.go  fix.go  generate.go  go.mod  kinds.go  language.go  resolve.go
tools/: BUILD.bazel  preset.bazelrc
ts/: BUILD.bazel  BUILD.package  BUILD.typescript  defs.bzl  extensions.bzl  proto.bzl  providers.bzl  repositories.bzl
ts/test/: BUILD.bazel  (+8 more)
(+371 files in other folders)
