load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@npm__prettier__3.6.2__links//:defs.bzl", "npm_link_imported_package")

npm_link_imported_package(name = "node_modules")

js_library(
    name = "prettierrc",
    srcs = [".prettierrc"],
    visibility = ["//:__subpackages__"],
)

buildifier(
    name = "buildifier",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)

alias(
    name = "format",
    actual = "//tools:format",
)
