"aspect-build/rules_ts"

module(
    name = "aspect_rules_ts",
    compatibility_level = 1,
)

# Lower-bounds (minimum) versions for direct runtime dependencies
bazel_dep(name = "aspect_bazel_lib", version = "2.19.2")
bazel_dep(name = "aspect_tools_telemetry", version = "0.3.3")
bazel_dep(name = "aspect_rules_js", version = "2.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "0.0.5")

# TODO(4.x): remove support for non-toolchainized protoc
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")

# Similar to rules_python/MODULE.bazel, see https://github.com/bazelbuild/rules_python/pull/832
# These are loaded only when using ts_proto_library
bazel_dep(name = "rules_proto", version = "6.0.0")

tel = use_extension("@aspect_tools_telemetry//:extension.bzl", "telemetry")
use_repo(tel, "aspect_tools_telemetry_report")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "tsgo-darwin-arm64",
    build_file_content = """\
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
native_binary(name = "tsgo", src = "lib/tsgo", data = glob(["lib/*.d.ts"]), visibility = ["//visibility:public"])""",
    integrity = "sha512-O7Hhb9m8AZJCAUSBbGmZs7Vm890Kh5Z3xAAASs+L4thtPM0oRckeaoXLvHeE9Qy1p8qG//EmZ3+uSdtUTV4wqg==",
    strip_prefix = "package",
    urls = [
        "https://registry.npmjs.org/@typescript/native-preview-darwin-arm64/-/native-preview-darwin-arm64-7.0.0-dev.20251117.1.tgz",
    ],
)

####### Dev dependencies ########

bazel_dep(name = "aspect_rules_lint", version = "1.13.0", dev_dependency = True)
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.59.0", dev_dependency = True, repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_nodejs", version = "6.7.3", dev_dependency = True)  # TODO(rm bazel6): repo_name = None)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(ts_version = "5.6.2")
use_repo(rules_ts_ext, "npm_typescript")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(version = "1.25.4")
use_repo(
    go_sdk,
    go_sdk = "go_default_sdk",
)

bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_license", version = "1.0.0")

go_repository = use_repo_rule("@gazelle//:deps.bzl", "go_repository")

go_repository(
    name = "com_github_go_json_experiment_json",
    commit = "cc2cfa0554c3",
    importpath = "github.com/go-json-experiment/json",
)

go_repository(
    name = "com_github_dlclark_regexp2",
    commit = "v1.11.5",
    importpath = "github.com/dlclark/regexp2",
)

go_repository(
    name = "com_github_google_go_cmp",
    commit = "v0.7.0",
    importpath = "github.com/google/go-cmp",
)

go_repository(
    name = "com_github_peter_evans_patience",
    commit = "v0.3.0",
    importpath = "github.com/peter-evans/patience",
)

go_repository(
    name = "com_github_zeebo_xxh3",
    commit = "v1.0.2",
    importpath = "github.com/zeebo/xxh3",
)

go_repository(
    name = "org_golang_x_tools",
    commit = "v0.36.0",
    importpath = "golang.org/x/tools",
)

go_repository(
    name = "org_golang_x_mod",
    commit = "v0.27.0",
    importpath = "golang.org/x/mod",
)

go_repository(
    name = "org_golang_x_text",
    commit = "v0.29.0",
    importpath = "golang.org/x/text",
)

go_repository(
    name = "org_golang_x_sync",
    commit = "v0.17.0",
    importpath = "golang.org/x/sync",
)

go_repository(
    name = "org_golang_x_sys",
    commit = "v0.36.0",
    importpath = "golang.org/x/sys",
)

go_repository(
    name = "org_golang_x_term",
    commit = "v0.35.0",
    importpath = "golang.org/x/term",
)

go_repository(
    name = "typescript_go",
    commit = "2f16c3cad0d995a4ba593ae68cade9653f486282",
    importpath = "github.com/microsoft/typescript-go",
)
