# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

java_binary(
    name = "renderer",
    main_class = "com/google/devtools/build/stardoc/renderer/RendererMain",
    runtime_deps = ["@stardoc-prebuilt//jar"],
)

stardoc_with_diff_test(
    name = "rules",
    bzl_library_target = "@aspect_rules_ts//ts:defs",
    renderer = "renderer",
)

stardoc_with_diff_test(
    name = "proto",
    bzl_library_target = "@aspect_rules_ts//ts:proto",
    renderer = "renderer",
)

stardoc_with_diff_test(
    name = "repositories",
    bzl_library_target = "@aspect_rules_ts//ts:repositories",
    renderer = "renderer",
    symbol_names = ["rules_ts_dependencies"],
)

update_docs(name = "update")
