bazel_dep(name = "aspect_rules_js", version = "2.3.8")
bazel_dep(name = "aspect_rules_ts")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "protobuf", version = "21.7")

# Minimum versions for bazel_lib and bazel9 compat
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = None)
bazel_dep(name = "rules_nodejs", version = "6.7.3", repo_name = None)

local_path_override(
    module_name = "aspect_rules_ts",
    path = "..",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

# Allow us to do 'bazel run @pnpm -- --dir=$PWD install'
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(ts_version_from = "//:package.json")
use_repo(rules_ts_ext, "npm_typescript")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "tsgo-darwin-arm64",
    build_file_content = """\
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
native_binary(name = "tsgo", src = "lib/tsgo", data = glob(["lib/*.d.ts"]), visibility = ["//visibility:public"])""",
    integrity = "sha512-Jo5kVoxaewKPn/3bKWyUB/gPR+Tjhj6isLc8VshV4OyFX4n6pkvVyk3ANivl7Kwmiv3WGKGUotbZ71DKCZATwA==",
    strip_prefix = "package",
    urls = [
        "https://registry.npmjs.org/@typescript/native-preview-darwin-arm64/-/native-preview-darwin-arm64-7.0.0-dev.20260130.1.tgz",
    ],
)
