bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "aspect_rules_ts")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "protobuf", version = "33.4")

# Minimum versions for bazel_lib and bazel9 compat
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = None)
bazel_dep(name = "rules_nodejs", version = "6.7.3")

local_path_override(
    module_name = "aspect_rules_ts",
    path = "..",
)

# TODO(alexeagle): remove this once the PR is merged
git_override(
    module_name = "aspect_rules_js",
    commit = "c6d592da6819db888690da84e702d295a7ca58a4",  # https://github.com/aspect-build/rules_js/pull/2722
    remote = "https://github.com/aspect-build/rules_js.git",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version_from_nvmrc = "//:.nvmrc")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

# Allow us to do 'bazel run @pnpm -- --dir=$PWD install'
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(pnpm_version_from = "//:package.json")
use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(ts_version_from = "//:package.json")
use_repo(rules_ts_ext, "npm_typescript")

register_toolchains("//tools/toolchains:all")
