bazel_dep(name = "aspect_rules_js", version = "2.3.8")
bazel_dep(name = "aspect_rules_ts")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "protobuf", version = "21.7")

# Minimum versions for bazel_lib and bazel9 compat
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = None)
bazel_dep(name = "rules_nodejs", version = "6.7.3", repo_name = None)

local_path_override(
    module_name = "aspect_rules_ts",
    path = "..",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

# Allow us to do 'bazel run @pnpm -- --dir=$PWD install'
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(ts_version_from = "//:package.json")
use_repo(rules_ts_ext, "npm_typescript")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# typescript7 / tsgo: native preview of the Go-based TypeScript compiler.
# Each platform's binary ships in a separate npm tarball; an alias in @tsgo
# selects the right one for the host.
TSGO_VERSION = "7.0.0-dev.20260504.1"

TSGO_PLATFORMS = {
    "darwin-arm64": "sha512-+Qs1Q7Qxfp11n/hU3pweFU+EQ37FnDsdWOOxb7/vCy8QGBysrLUUYRhQ+GSW3s663oMtN6+9Kf82hk3ZT+kXlg==",
    "darwin-x64": "sha512-Wr3GWTRiMgibmhe88cjQ612ZyY7sbgsPYEaWKGPUxBaXtMHFIzgTBIoJMuaQqQx4GEJs6AUDyhnIHG1gx4rJjg==",
    "linux-arm": "sha512-s8QkhZe0M4QD2xhK1Xiy2JUQv1AOl8kUg5DLx1G8ws0f1BK/oKyqDNbxhZMGINYLFvkjpr9lOxt7qehSnpJMYQ==",
    "linux-arm64": "sha512-y1Qai5l55Sl+/3B0hyQtvynq//C22BKFH3CfU35fbLYUo4P/ISUycyAbcA+PAPazpDFO3E56I96QUQrbJL2VVA==",
    "linux-x64": "sha512-ngN3Ie3Vin6pFtqeNywxm86RTxgI0Fo0GZyJ1PxokLES8J3xfMPtMYfv85c/+5uz5+7T+m4LRLyY5IoLY4gtuw==",
    "win32-arm64": "sha512-/GZDJN/CsLbqIe7EdWDkXhNX9C41VjemBeUN6+9ckvEFLH8XyKTmXPYikNOn0N819M1KSeNZltplyUslfROOdw==",
    "win32-x64": "sha512-EYQBdVZq4xIzhTtKxw6wvee9238hEb7XrPG413AEZBD3kcR3qqvPULXsPzQyEpneCReATSaihscP/LfhMQYUmA==",
}

[
    http_archive(
        name = "tsgo-" + platform,
        build_file_content = """\
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
native_binary(name = "tsgo", src = "lib/tsgo", data = glob(["lib/*.d.ts"]), visibility = ["//visibility:public"])""",
        integrity = integrity,
        strip_prefix = "package",
        urls = [
            "https://registry.npmjs.org/@typescript/native-preview-{p}/-/native-preview-{p}-{v}.tgz".format(p = platform, v = TSGO_VERSION),
        ],
    )
    for platform, integrity in TSGO_PLATFORMS.items()
]
