load("@bazelrc-preset.bzl", "bazelrc_preset")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//:__subpackages__"])

sh_binary(
    name = "noop",
    srcs = ["noop.sh"],
)

bazelrc_preset(
    name = "preset",
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
    # The output is specific to the version in .bazelversion
    tags = ["manual"],
)
