load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

# Users can enable with --@aspect_rules_ts//ts:skipLibCheck=always
string_flag(
    # Note: this name is chosen to be searchable when users look for "skipLibCheck" in their repo,
    # as that's the way it appears in tsconfig.json or tsc command line.
    name = "skipLibCheck",
    # TODO(2.0): change default to "unspecified"
    build_setting_default = "honor_tsconfig",
    values = [
        "always",
        "honor_tsconfig",
        "unspecified",
    ],
)

# Note, users could use a Transition to make a subgraph of their depgraph opt-in to skipLibCheck.
config_setting(
    name = "skip_lib_check.always",
    flag_values = {":skipLibCheck": "always"},
)

config_setting(
    name = "skip_lib_check.honor_tsconfig",
    flag_values = {":skipLibCheck": "honor_tsconfig"},
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//ts/private/docs:ts_config",
        "//ts/private/docs:ts_project",
        "@aspect_rules_js//js:defs",
        "@bazel_skylib//lib:partial",
        "@bazel_skylib//rules:build_test",
    ],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//ts/private/docs:maybe",
        "//ts/private/docs:npm_repositories",
        "//ts/private/docs:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)
